<resources>
    <string name="app_name">Temanolga</string>
    <string name="title_home">Home</string>
    <string name="title_explore">Explore</string>
    <string name="title_message">Message</string>
    <string name="title_profile">Profile</string>
    <string name="title_notification">Notification</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="account_type">Account Type</string>
    <string name="sport_preferred">Sport Preferred</string>
    <string name="sport">Sport</string>
    <string name="running">Running</string>
    <string name="futsal">Futsal</string>
    <string name="football">Football</string>
    <string name="person">Person</string>
    <string name="team">Team</string>
    <string name="person_or_team">Team or person</string>
    <string name="city">City</string>
    <string name="signup_msg">Don\'t have an account ?</string>
    <string name="signin_msg">Already have an account ?</string>
    <string name="empty_password">Please fill your password</string>
    <string name="email_invalid">Please fill your email correctly</string>
    <string name="fullname_invalid">Please fill your name</string>
    <string name="city_invalid">Please fill your city</string>
    <string name="password_length">Password min 8 character</string>
    <string name="login_fail">Email and password is wrong</string>
    <string name="done">Done</string>
    <string name="join">Join</string>
    <string name="chat">Chat</string>
    <string name="venue">Venue (Required)</string>
    <string name="slot">Slot</string>
    <string name="add_desc">Add description here ...</string>
    <string name="date">Date (Required)</string>
    <string name="time">Time (Required)</string>
    <string name="set">Set</string>
    <string name="find">Find</string>
    <string name="search">Search User</string>
    <string name="search_place">Search Place</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="place_invalid">Please fill the venue data</string>
    <string name="date_invalid">Please fill the date</string>
    <string name="time_invalid">Please fill the time</string>
    <string name="message_text">Text Message</string>
    <string name="event_detail">Invitation Detail</string>
    <string name="refresh">Refresh</string>
    <string name="send">Send</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="joined">Joined</string>
    <string name="requested">Requested</string>
    <string name="request_notif">%1$s want to join your %2$s invitation</string>
    <string name="confirm_notif">%1$s has %2$s your join request</string>
    <string name="accept">Accept</string>
    <string name="ignore">Ignore</string>
    <string name="accepted">Accepted</string>
    <string name="ignored">Ignored</string>
    <string name="confirmation">Confirmation</string>
    <string name="request">Request</string>
    <string name="filter">Filter</string>
    <string name="suggested_user">Discover User</string>
    <string name="sport_venue">Sport Venue</string>
    <string name="running_track">Running Track</string>
    <string name="futsal_field">Futsal Field</string>
    <string name="football_field">Football Field</string>
    <string name="change_photo">Change Photo</string>
    <string name="expire">EXPIRED</string>
    <string name="expire_msg">The invitation has expired</string>
    <string name="empty_event_user">No invitation yet</string>
    <string name="empty_event_home">No invitation data found</string>
    <string name="first_invitee">Be the first invitee</string>
    <string name="empty_notif">No recent activity</string>
    <string name="empty_message">Message empty</string>
    <string name="empty_profile">No invitation yet on your profile</string>
    <string name="empty_explore">No Suggested user found</string>
    <string name="empty_search">User not found</string>
    <string name="read">Read</string>
    <string name="slot_full">Slot Full</string>
    <string name="enable_location">Enable Location</string>
    <string name="please_enable">Please enable your device location</string>
    <string name="to_access_venue">to access nearby sport venue</string>
    <string name="posting">Posting</string>
    <string name="invitation_posted">Invitation posted</string>
    <string name="network_error">Network Error</string>
    <string name="network_add_event">Network unavailable, can\'t post invitation</string>
    <string name="network_edit_event">Network unavailable, can\'t update data</string>
    <string name="event_updated">Invitation Updated</string>
    <string name="event_update_fail">Can\'t update invitation data</string>
    <string name="uploading">Uploading</string>
    <string name="network_edit_profile">Network unavailable, can\'t update profile</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="cancel_join_prompt">Cancel joined this invitation ?</string>
    <string name="delete_post">Delete this invitation ?</string>
    <string name="post_deleted">Invitation deleted</string>
    <string name="network_joined">Network unavailable, can\'t cancel join this invitation</string>
    <string name="network_join">Network unavailable, can\'t join this invitation</string>
    <string name="network_request">Network unavailable, can\'t cancel this request</string>
    <string name="network_delete">Network unavailable, can\'t delete this invitation</string>
    <string name="network_event_detail">Network error, can\'t get invitation detail</string>
    <string name="share_prompt">Share Invitation</string>
    <string name="network_login">Network unavailable, can\'t sign in</string>
    <string name="sign_up_success">Sign up success</string>
    <string name="sign_up_fail">Sign up failed, Email has been used !</string>
    <string name="network_signup">Network unavailable, can\'t sign up</string>
    <string name="network_user_detail">Network error, can\'t get user data</string>
    <string name="delete_chat">Delete this chat ?</string>
    <string name="network_confirmation">Network error, can\'t get confirmation data</string>
    <string name="network_explore">Network error, can\'t get suggested user data</string>
    <string name="network_home">Network error, can\'t get invitation data</string>
    <string name="network_message">Network error, can\'t get message data</string>
    <string name="network_profile">Network error, can\'t get your data</string>
    <string name="logout_prompt">Logout from this account ?</string>
    <string name="network_notif">Network error, can\'t get notification data</string>
    <string name="event_invitation">%s Invitation</string>
    <string name="joined_event_limited">%1$d/%2$d %3$s joined</string>
    <string name="slot_type_limited">%d %s limit</string>
    <string name="joined_event">%d %s joined</string>
    <string name="slot_type">Free %s join</string>
    <string name="slot_only">%s Only</string>
    <string name="acc_personal">Interested in %s</string>
    <string name="acc_team">%s Team</string>
    <string name="showing_filter">Showing %1$s invitation in %2$s</string>
    <string name="showing_filter_no_city">Showing %1$s invitation</string>
    <string name="profile_updated">Profile Updated</string>
    <string name="email_used">Email sudah ada yang menggunakan, gagal memperbarui</string>
    <string name="forgot_password">Forgot your password ?</string>
    <string name="reset_promt">Reset Password</string>
    <string name="send_email">Enter your email to reset your account password.</string>
    <string name="reset">Reset</string>
    <string name="email_sent">Email for reset password sent. Please check your inbox.</string>
    <string name="email_not_found">Account with that email not found. Please try again with different email.</string>
    <string name="about">About</string>
    <string name="report">Report a problem</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New password</string>
    <string name="retype_password">Retype new password</string>
    <string name="password_match">Password didn\'t match, please retype correctly</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="changed">Changed</string>
    <string name="network_logout">Network unavailable, can\'t logout</string>

    <string name="default_notification_channel_id">temanolga_default_channel</string>

    <string name="access_token">
        pk.eyJ1IjoibHV0aGZpMTEiLCJhIjoiY2psdWVvM3J3MGszaTN3cXA1ODRqcGQ1cSJ9.Kg15RUMGU58Zigp5yJvq3g
    </string>

    <array name="account_type">
        <item>Personal</item>
        <item>Team</item>
    </array>

    <array name="sport_array">
        <item>Running</item>
        <item>Futsal</item>
        <item>Football</item>
    </array>

    <array name="slot_type_array">
        <item>Person</item>
        <item>Team</item>
        <item>Team or person</item>
    </array>

</resources>
