<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home"
            android:title="@string/title_home" />

    <item
            android:id="@+id/navigation_explore"
            android:icon="@drawable/ic_explore"
            android:title="@string/title_explore" />

    <item
            android:id="@+id/navigation_message"
            android:icon="@drawable/ic_email_fill"
            android:title="@string/title_message" />

    <item
            android:id="@+id/navigation_notification"
            android:icon="@drawable/ic_notifications"
            android:title="@string/title_notification" />

    <item
            android:id="@+id/navigation_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/title_profile" />
</menu>
