<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:focusableInTouchMode="true"
        tools:context=".ui.login.LoginActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="30dp"
                android:orientation="vertical">

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="110dp"
                    android:src="@drawable/ic_logo_login"
                    android:contentDescription="@string/signin"
                    android:layout_marginBottom="10dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    android:text="@string/reset_promt"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorMuted"
                    android:layout_gravity="start"
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="2dp"
                    android:text="@string/send_email"/>

            <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="14dp"
                    android:hint="@string/prompt_email"
                    android:textSize="14sp"
                    android:textColor="@color/colorWhite"
                    android:drawableStart="@drawable/ic_email_white"
                    android:drawablePadding="12dp"
                    android:background="@drawable/edit_text_shape"/>

            <Button
                    android:id="@+id/btnReset"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:minWidth="140dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/button_shape_white"
                    android:text="@string/reset"/>

            <ProgressBar
                    android:id="@+id/progressReset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:visibility="gone"/>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>