<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:focusableInTouchMode="true"
        tools:context=".activities.SignUpActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="30dp"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="140dp"
                    android:src="@drawable/ic_logo_login"
                    android:contentDescription="@string/signin"
                    android:layout_margin="20dp"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="0dip"
                        android:layout_weight="0.5"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:textColor="@color/colorWhite"
                        android:text="@string/account_type"/>

                <TextView
                        android:layout_width="0dip"
                        android:layout_weight="0.5"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:textColor="@color/colorWhite"
                        android:text="@string/sport_preferred"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <Spinner
                        android:id="@+id/spn_account_type"
                        android:layout_width="0dip"
                        android:layout_weight="0.5"
                        android:layout_height="50dp"
                        android:layout_marginBottom="14dp"
                        android:layout_marginEnd="7dp"
                        android:popupBackground="@color/colorPrimaryDark"
                        android:background="@drawable/edit_text_shape"
                        tools:entries="@array/account_type"/>

                <Spinner
                        android:id="@+id/spn_sport"
                        android:layout_width="0dip"
                        android:layout_weight="0.5"
                        android:layout_height="50dp"
                        android:layout_marginBottom="14dp"
                        android:layout_marginStart="7dp"
                        android:popupBackground="@color/colorPrimaryDark"
                        android:background="@drawable/edit_text_shape"
                        tools:entries="@array/sport_array"/>
            </LinearLayout>

            <EditText
                    android:id="@+id/et_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="text"
                    android:padding="10dp"
                    android:layout_marginBottom="14dp"
                    android:hint="@string/full_name"
                    android:textSize="14sp"
                    android:textColor="@color/colorWhite"
                    android:drawableStart="@drawable/ic_profile_white"
                    android:drawablePadding="12dp"
                    android:background="@drawable/edit_text_shape"/>

            <AutoCompleteTextView
                    android:id="@+id/et_city"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="text"
                    android:padding="10dp"
                    android:layout_marginBottom="14dp"
                    android:hint="@string/city"
                    android:textSize="14sp"
                    android:textColor="@color/colorWhite"
                    android:drawableStart="@drawable/ic_city"
                    android:drawablePadding="12dp"
                    android:background="@drawable/edit_text_shape"/>

            <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textSize="14sp"
                    android:layout_marginBottom="14dp"
                    android:hint="@string/prompt_email"
                    android:textColor="@color/colorWhite"
                    android:drawableStart="@drawable/ic_email_white"
                    android:drawablePadding="12dp"
                    android:background="@drawable/edit_text_shape"/>

            <EditText
                    android:id="@+id/et_password_signup"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textSize="14sp"
                    android:fontFamily="sans-serif"
                    android:layout_marginBottom="30dp"
                    android:textColor="@color/colorWhite"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="12dp"
                    android:background="@drawable/edit_text_shape"/>

            <Button
                    android:id="@+id/btn_signup"
                    android:layout_width="140dp"
                    android:layout_height="40dp"
                    android:background="@drawable/button_shape_white"
                    android:layout_marginBottom="8dp"
                    android:text="@string/signup"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="18dp"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/colorWhite"
                        android:text="@string/signin_msg"/>

                <TextView
                        android:id="@+id/tv_signin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginStart="6dp"
                        android:textColor="@color/colorAccent"
                        android:text="@string/signin"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>