<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:focusableInTouchMode="true">

    <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/colorMuted"/>

    <EditText
            android:id="@+id/etNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:textSize="14sp"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:background="@color/colorWhite"/>

    <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/colorMuted"/>

    <EditText
            android:id="@+id/etRetypePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:textSize="14sp"
            android:hint="@string/retype_password"
            android:inputType="textPassword"
            android:background="@color/colorWhite" />

    <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/colorMuted"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <Button
                android:id="@+id/btnCancel"
                android:layout_width="0dip"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/card_selected"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:text="@string/cancel"
                android:textColor="@color/colorPrimary"/>

        <Button
                android:id="@+id/btnSave"
                android:layout_width="0dip"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/card_selected"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:text="@string/save"
                android:textColor="@color/colorPrimary"/>

    </LinearLayout>

</LinearLayout>