<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:focusableInTouchMode="true"
    tools:context=".activities.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="30dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="140dp"
                android:src="@drawable/ic_logo_login"
                android:contentDescription="@string/signin"
                android:layout_marginBottom="30dp"/>

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:layout_marginBottom="14dp"
                android:hint="@string/prompt_email"
                android:textSize="14sp"
                android:textColor="@color/colorWhite"
                android:drawableStart="@drawable/ic_email_white"
                android:drawablePadding="12dp"
                android:background="@drawable/edit_text_shape" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textSize="14sp"
                android:fontFamily="sans-serif"
                android:layout_marginBottom="6dp"
                android:textColor="@color/colorWhite"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="12dp"
                android:background="@drawable/edit_text_shape" />

            <TextView
                android:id="@+id/tv_Wrong"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                tools:text="Username atau Password Salah"
                android:layout_marginBottom="20dp"
                android:textColor="@android:color/holo_red_light"
                android:gravity="center"/>

            <Button
                android:id="@+id/btn_signin"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_shape_white"
                android:layout_marginBottom="8dp"
                android:text="@string/signin"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/colorWhite"
                    android:text="@string/signup_msg"/>

                <TextView
                    android:id="@+id/tv_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginStart="6dp"
                    android:textColor="@color/colorAccent"
                    android:text="@string/signup"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>